@@ -1,3 +1,9 @@
+2002-11-11  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* coff-h8300.c: Fix formatting.
+	* elf32-h8300.c: Likewise.
+	* reloc16.c: Likewise.
+
 2002-11-09  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
 
 	* elf32-arm.h (elf32_arm_size_dynamic_sections): Don't strip output
